@@ -13,6 +13,7 @@
   * #span_element
   * #table_element
   * #cell_element
+  * #image_element
 === 2016-07-05
 * Enhancements
   * Added #value= to TextField and TextArea
